feat: settings (#16)
* Add currency settings panel and support for multiple currencies

- Create CurrencyManager to handle currency preferences
- Support multiple currencies (USD, EUR, GBP, JPY) for Bitcoin price conversion
- Add settings UI with currency selection options
- Update ModernPOSActivity to display prices in selected currency
- Fix deprecated URL constructor using URI approach
- Update bottom navigation with settings button

* Fix input value preservation when toggling between BTC and FIAT inputs

When toggling between satoshis and fiat input modes, the app now correctly maintains
the value rather than treating the input string as the same raw value. This preserves
the actual monetary amount during conversion.