@@ -6,6 +6,8 @@ import android.os.Handler;
 import android.os.Looper;
 import android.util.Log;
 
+import com.electricdreams.shellshock.util.CurrencyManager;
+
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -13,19 +15,22 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
 /**
- * Worker class to fetch and cache Bitcoin price in USD from Coinbase API
+ * Worker class to fetch and cache Bitcoin price in various currencies from Coinbase API
  */
 public class BitcoinPriceWorker {
     private static final String TAG = "BitcoinPriceWorker";
-    private static final String COINBASE_API_URL = "https://api.coinbase.com/v2/prices/BTC-USD/spot";
     private static final String PREFS_NAME = "BitcoinPricePrefs";
-    private static final String KEY_BTC_USD_PRICE = "btcUsdPrice";
+    private static final String KEY_PRICE_PREFIX = "btcPrice_";
     private static final String KEY_LAST_UPDATE_TIME = "lastUpdateTime";
     private static final long UPDATE_INTERVAL_MINUTES = 1; // Update every minute
     
@@ -33,7 +38,8 @@ public class BitcoinPriceWorker {
     private ScheduledExecutorService scheduler;
     private final Context context;
     private final Handler mainHandler;
-    private double btcUsdPrice = 0.0;
+    private final CurrencyManager currencyManager;
+    private final Map<String, Double> priceByCurrency = new HashMap<>();
     private PriceUpdateListener listener;
 
     public interface PriceUpdateListener {
@@ -43,16 +49,23 @@ public class BitcoinPriceWorker {
     private BitcoinPriceWorker(Context context) {
         this.context = context.getApplicationContext();
         this.mainHandler = new Handler(Looper.getMainLooper());
+        this.currencyManager = CurrencyManager.getInstance(context);
         
-        // Load cached price on initialization
-        SharedPreferences prefs = context.getSharedPreferences(PREFS_NAME, Context.MODE_PRIVATE);
-        btcUsdPrice = prefs.getFloat(KEY_BTC_USD_PRICE, 0.0f);
+        // Load cached prices on initialization
+        loadCachedPrices();
         
-        if (btcUsdPrice <= 0) {
-            // No cached price, fetch immediately
+        // Set up a listener for currency changes
+        currencyManager.setCurrencyChangeListener(newCurrency -> {
+            // When currency changes, update the price
+            fetchPrice();
+        });
+        
+        // If we don't have a price for the current currency, fetch it now
+        if (getCurrentPrice() <= 0) {
             fetchPrice();
         } else {
             // Check how old the cached price is
+            SharedPreferences prefs = context.getSharedPreferences(PREFS_NAME, Context.MODE_PRIVATE);
             long lastUpdateTime = prefs.getLong(KEY_LAST_UPDATE_TIME, 0);
             long currentTime = System.currentTimeMillis();
             long elapsedMinutes = TimeUnit.MILLISECONDS.toMinutes(currentTime - lastUpdateTime);
@@ -74,10 +87,32 @@ public class BitcoinPriceWorker {
         return instance;
     }
 
+    /**
+     * Load all cached prices from preferences
+     */
+    private void loadCachedPrices() {
+        SharedPreferences prefs = context.getSharedPreferences(PREFS_NAME, Context.MODE_PRIVATE);
+        
+        // Load prices for all supported currencies
+        for (String currency : new String[] {
+                CurrencyManager.CURRENCY_USD,
+                CurrencyManager.CURRENCY_EUR,
+                CurrencyManager.CURRENCY_GBP,
+                CurrencyManager.CURRENCY_JPY
+        }) {
+            String key = KEY_PRICE_PREFIX + currency;
+            float price = prefs.getFloat(key, 0.0f);
+            if (price > 0) {
+                priceByCurrency.put(currency, (double) price);
+                Log.d(TAG, "Loaded cached price for " + currency + ": " + price);
+            }
+        }
+    }
+
     public void setPriceUpdateListener(PriceUpdateListener listener) {
         this.listener = listener;
         // Immediately notify listener with current price
-        if (btcUsdPrice > 0 && listener != null) {
+        if (getCurrentPrice() > 0 && listener != null) {
             notifyListener();
         }
     }
@@ -106,17 +141,42 @@ public class BitcoinPriceWorker {
     }
     
     /**
-     * Get the current BTC price in USD
+     * Get the current BTC price in the selected currency
+     */
+    public double getCurrentPrice() {
+        String currency = currencyManager.getCurrentCurrency();
+        return priceByCurrency.getOrDefault(currency, 0.0);
+    }
+    
+    /**
+     * Get the current BTC price in USD (for backward compatibility)
      */
     public double getBtcUsdPrice() {
-        return btcUsdPrice;
+        return priceByCurrency.getOrDefault(CurrencyManager.CURRENCY_USD, 0.0);
     }
 
     /**
-     * Convert satoshis to USD based on current BTC price
+     * Convert satoshis to the current currency based on current BTC price
+     */
+    public double satoshisToFiat(long satoshis) {
+        double currentPrice = getCurrentPrice();
+        if (currentPrice <= 0) {
+            return 0.0;
+        }
+        
+        // Convert satoshis to BTC (1 BTC = 100,000,000 satoshis)
+        double btcAmount = satoshis / 100000000.0;
+        
+        // Convert BTC to current currency
+        return btcAmount * currentPrice;
+    }
+
+    /**
+     * Convert satoshis to USD (for backward compatibility)
      */
     public double satoshisToUsd(long satoshis) {
-        if (btcUsdPrice <= 0) {
+        double usdPrice = priceByCurrency.getOrDefault(CurrencyManager.CURRENCY_USD, 0.0);
+        if (usdPrice <= 0) {
             return 0.0;
         }
         
@@ -124,18 +184,25 @@ public class BitcoinPriceWorker {
         double btcAmount = satoshis / 100000000.0;
         
         // Convert BTC to USD
-        return btcAmount * btcUsdPrice;
+        return btcAmount * usdPrice;
     }
 
     /**
-     * Format a USD amount as a string with $ sign and 2 decimal places
+     * Format a fiat amount in the current currency
+     */
+    public String formatFiatAmount(double amount) {
+        return currencyManager.formatCurrencyAmount(amount);
+    }
+
+    /**
+     * Format a USD amount (for backward compatibility)
      */
     public String formatUsdAmount(double usdAmount) {
         return String.format("$%.2f USD", usdAmount);
     }
 
     /**
-     * Fetch the current Bitcoin price from Coinbase API
+     * Fetch the current Bitcoin price from Coinbase API for the current currency
      */
     private void fetchPrice() {
         new Thread(() -> {
@@ -143,7 +210,14 @@ public class BitcoinPriceWorker {
             BufferedReader reader = null;
             
             try {
-                URL url = new URL(COINBASE_API_URL);
+                String currency = currencyManager.getCurrentCurrency();
+                String apiUrl = currencyManager.getCoinbaseApiUrl();
+                Log.d(TAG, "Fetching Bitcoin price in " + currency + " from: " + apiUrl);
+                
+                // Use URI and URL.toURI() to avoid the deprecated URL constructor
+                URI uri = new URI(apiUrl);
+                URL url = uri.toURL();
+                
                 connection = (HttpURLConnection) url.openConnection();
                 connection.setRequestMethod("GET");
                 connection.setConnectTimeout(5000);
@@ -165,15 +239,15 @@ public class BitcoinPriceWorker {
                     double price = data.getDouble("amount");
                     
                     // Update price and cache
-                    btcUsdPrice = price;
-                    cachePrice(price);
+                    priceByCurrency.put(currency, price);
+                    cachePrice(currency, price);
                     
-                    Log.d(TAG, "Bitcoin price updated: " + price + " USD");
+                    Log.d(TAG, "Bitcoin price updated: " + price + " " + currency);
                     notifyListener();
                 } else {
                     Log.e(TAG, "Failed to fetch Bitcoin price, response code: " + responseCode);
                 }
-            } catch (IOException | JSONException e) {
+            } catch (IOException | JSONException | URISyntaxException e) {
                 Log.e(TAG, "Error fetching Bitcoin price: " + e.getMessage(), e);
             } finally {
                 if (reader != null) {
@@ -192,11 +266,11 @@ public class BitcoinPriceWorker {
     }
 
     /**
-     * Cache the Bitcoin price in SharedPreferences
+     * Cache the Bitcoin price for a specific currency in SharedPreferences
      */
-    private void cachePrice(double price) {
+    private void cachePrice(String currency, double price) {
         SharedPreferences.Editor editor = context.getSharedPreferences(PREFS_NAME, Context.MODE_PRIVATE).edit();
-        editor.putFloat(KEY_BTC_USD_PRICE, (float) price);
+        editor.putFloat(KEY_PRICE_PREFIX + currency, (float) price);
         editor.putLong(KEY_LAST_UPDATE_TIME, System.currentTimeMillis());
         editor.apply();
     }
@@ -206,7 +280,7 @@ public class BitcoinPriceWorker {
      */
     private void notifyListener() {
         if (listener != null) {
-            mainHandler.post(() -> listener.onPriceUpdated(btcUsdPrice));
+            mainHandler.post(() -> listener.onPriceUpdated(getCurrentPrice()));
         }
     }
 }
